# tets_task_ts

./: CMakeLists.txt  main.cpp
cmake/: build_prefix.cmake
src/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Renderer.cpp  Renderer.h  Shape.h  Triangle.cpp  Triangle.h  UserInteraction.cpp  UserInteraction.h
